--- a/styles/project.css
+++ b/styles/project.css
@@ -1,3 +1,14 @@
+/*
+=============== 
+Variables
+===============
+*/
+
+:root {
+    --border-radius: 14px;
+}
+
+
 /* CSS reset rules */
 *,
 *::after,
@@ -15,18 +26,13 @@ html {
 
 body {
     background-color: #000;
+    font-family: sans-serif;
     font-size: 1rem;
     overflow-y: hidden;
 }
 
 #camera-area {
     color: #fb0;
-    font-family: 'sans-serif';
-    font-weight: bold;
-}
-
-#camera-area button {
-    border-radius: 8px;
     font-weight: bold;
 }
 
@@ -39,5 +45,15 @@ body {
 }
 
 .btn {
+    border: 1px solid #eee;
+    border-radius: var(--border-radius);
+    font-weight: bold;
+    padding: .5rem;
+}
+
+.select-area {
+    border: 1px solid #eee;
+    border-radius: var(--border-radius);
+    display: inline-block;
     padding: .5rem;
 }
